--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -31,6 +31,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "srio.hive";
   }
 
+  host johndoe {
+    hardware ethernet 00:50:8d:b0:fe:7e;
+    fixed-address 172.16.0.26;
+    option host-name "johndoe.hive";
+  }
+
   host node1 {
     hardware ethernet 08:00:27:7d:6a:e2;
     fixed-address 172.16.2.1;
