--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -19,6 +19,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option domain-name-servers 172.16.0.11, 172.16.0.12;
   option netbios-name-servers 172.16.0.11;
 
+  host joamag {
+    hardware ethernet 00:1f:f3:d4:2b:38;
+    fixed-address 172.16.0.24;
+    option host-name "joamag.hive";
+  }
+
   host tsilva {
     hardware ethernet 00:22:41:31:41:2b;
     fixed-address 172.16.0.24;
