new dummy values added

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -25,6 +25,18 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "joamag.hive";
   }
 
+  host lmartinho {
+    hardware ethernet ff:ff:ff:ff:ff:ff;
+    fixed-address 172.16.0.22;
+    option host-name "lmartinho.hive";
+  }
+
+  host nlima {
+    hardware ethernet ff:ff:ff:ff:ff:ff;
+    fixed-address 172.16.0.23;
+    option host-name "nlima.hive";
+  }
+
   host tsilva {
     hardware ethernet 00:22:41:31:41:2b;
     fixed-address 172.16.0.24;
@@ -43,6 +55,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "johndoe.hive";
   }
 
+  host hole1 {
+    hardware ethernet 08:00:27:c8:6b:c8;
+    fixed-address 172.16.0.71;
+    option host-name "hole1.hive";
+  }
+
   host node1 {
     hardware ethernet 08:00:27:7d:6a:e2;
     fixed-address 172.16.2.1;
@@ -50,7 +68,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host node2 {
-    hardware ethernet 00:00:ff:ff:ff:ff;
+    hardware ethernet ff:ff:ff:ff:ff:ff;
     fixed-address 172.16.2.2;
     option host-name "node2.g.hive";
   }
