--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -9,7 +9,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
 
   option domain-name "hive";
 
-  option routers 172.16.0.26;
+  option routers 172.16.0.26, 172.16.0.1;
   option ip-forwarding on;
 
   option broadcast-address 172.16.255.255;
