new configuration value

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -26,7 +26,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host lmartinho {
-    hardware ethernet ff:ff:ff:ff:ff:ff;
+    hardware ethernet 00:22:41:31:4a:ca;
     fixed-address 172.16.0.22;
     option host-name "lmartinho.hive";
   }
