--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -55,6 +55,18 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "johndoe.hive";
   }
 
+  host sandbox5 {
+    hardware ethernet 08:00:27:fd:6f:08;
+    fixed-address 172.16.0.26;
+    option host-name "sandbox5.hive";
+  }
+  
+  host sandbox6 {
+    hardware ethernet 08:00:27:fd:6f:08;
+    fixed-address 172.16.0.26;
+    option host-name "sandbox6.hive";
+  }
+
   host hole1 {
     hardware ethernet 08:00:27:c8:6b:c8;
     fixed-address 172.16.0.71;
