--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -62,7 +62,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
   
   host sandbox6 {
-    hardware ethernet 08:00:27:fd:6f:02;
+    hardware ethernet 08:00:27:1a:8d:ab;
     fixed-address 172.16.0.56;
     option host-name "sandbox6.hive";
   }
