new sandbox configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -67,6 +67,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox6.hive";
   }
 
+  host sandbox7 {
+    hardware ethernet 08:00:27:a5:6a:47;
+    fixed-address 172.16.0.57;
+    option host-name "sandbox7.hive";
+  }
+
   host hole1 {
     hardware ethernet 08:00:27:c8:6b:c8;
     fixed-address 172.16.0.71;
