--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -72,7 +72,13 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.57;
     option host-name "sandbox7.hive";
   }
-
+  
+  host sandbox15 {
+    hardware ethernet 08:00:27:1b:89:16;
+    fixed-address 172.16.0.65;
+    option host-name "sandbox15.hive";
+  }
+ 
   host hole1 {
     hardware ethernet 08:00:27:c8:6b:c8;
     fixed-address 172.16.0.71;
