new sandbox added

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -60,7 +60,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.55;
     option host-name "sandbox5.hive";
   }
-  
+
   host sandbox6 {
     hardware ethernet 08:00:27:1a:8d:ab;
     fixed-address 172.16.0.56;
@@ -72,13 +72,19 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.57;
     option host-name "sandbox7.hive";
   }
-  
+
+  host sandbox9 {
+    hardware ethernet 08:00:27:1a:63:6c;
+    fixed-address 172.16.0.59;
+    option host-name "sandbox9.hive";
+  }
+
   host sandbox15 {
     hardware ethernet 08:00:27:1b:89:16;
     fixed-address 172.16.0.65;
     option host-name "sandbox15.hive";
   }
- 
+
   host hole1 {
     hardware ethernet 08:00:27:c8:6b:c8;
     fixed-address 172.16.0.71;
