--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -79,6 +79,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox9.hive";
   }
 
+  host sandbox11 {
+    hardware ethernet 08:00:27:ea:43:f8;
+    fixed-address 172.16.0.61;
+    option host-name "sandbox11.hive";
+  }
+
   host sandbox15 {
     hardware ethernet 08:00:27:1b:89:16;
     fixed-address 172.16.0.65;
