--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -78,6 +78,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.59;
     option host-name "sandbox9.hive";
   }
+  
+  host sandbox10 {
+    hardware ethernet 08:00:27:a1:ed:93;
+    fixed-address 172.16.0.60;
+    option host-name "sandbox10.hive";
+  }
 
   host sandbox11 {
     hardware ethernet 08:00:27:ea:43:f8;
