--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -91,6 +91,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox11.hive";
   }
 
+  host sandbox12 {
+    hardware ethernet 08:00:27:5a:26:f2;
+    fixed-address 172.16.0.62;
+    option host-name "sandbox12.hive";
+  }
+
   host sandbox15 {
     hardware ethernet 08:00:27:1b:89:16;
     fixed-address 172.16.0.65;
