--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -97,6 +97,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox12.hive";
   }
 
+  host sandbox14 {
+    hardware ethernet 08:00:27:0b:f4:bc;
+    fixed-address 172.16.0.64;
+    option host-name "sandbox14.hive";
+  }
+
   host sandbox15 {
     hardware ethernet 08:00:27:1b:89:16;
     fixed-address 172.16.0.65;
