--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -97,6 +97,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox12.hive";
   }
 
+  host sandbox13 {
+    hardware ethernet 08:00:27:7e:0f:cb;
+    fixed-address 172.16.0.63;
+    option host-name "sandbox13.hive";
+  }
+
   host sandbox14 {
     hardware ethernet 08:00:27:0b:f4:bc;
     fixed-address 172.16.0.64;
