--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -73,12 +73,18 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox7.hive";
   }
 
+  host sandbox8 {
+    hardware ethernet 08:00:27:ad:3e:bf;
+    fixed-address 172.16.0.58;
+    option host-name "sandbox8.hive";
+  }
+
   host sandbox9 {
     hardware ethernet 08:00:27:1a:63:6c;
     fixed-address 172.16.0.59;
     option host-name "sandbox9.hive";
   }
-  
+
   host sandbox10 {
     hardware ethernet 08:00:27:a1:ed:93;
     fixed-address 172.16.0.60;
