--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -121,6 +121,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sandbox15.hive";
   }
 
+  host nas1 {
+    hardware ethernet 08:00:27:3a:35:81;
+    fixed-address 172.16.0.31;
+    option host-name "nas1.hive";
+  }
+
   host hole1 {
     hardware ethernet 08:00:27:c8:6b:c8;
     fixed-address 172.16.0.71;
