--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -16,7 +16,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option subnet-mask 255.255.0.0;
 
   option ntp-servers 172.16.0.11, 172.16.0.12;
-  option domain-name-servers 172.16.0.11, 172.16.0.12;
+  option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
   option netbios-name-servers 172.16.0.11;
 
   host joamag {
