new physical address

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -44,7 +44,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host srio {
-    hardware ethernet 00:22:41:31:46:98;
+    hardware ethernet 10:dd:b1:c3:3a:88;
     fixed-address 172.16.0.25;
     option host-name "srio.hive";
   }
