--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -38,7 +38,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host tsilva {
-    hardware ethernet 00:22:41:31:41:2b;
+    hardware ethernet 10:dd:b1:c0:44:2f;
     fixed-address 172.16.0.24;
     option host-name "tsilva.hive";
   }
