new dhcp configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -133,6 +133,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "hole1.hive";
   }
 
+  host hole3 {
+    hardware ethernet 08:00:27:3d:49:a5;
+    fixed-address 172.16.0.73;
+    option host-name "hole3.hive";
+  }
+
   host node1 {
     hardware ethernet 08:00:27:7d:6a:e2;
     fixed-address 172.16.2.1;
