new dhcp configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -138,6 +138,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.73;
     option host-name "hole3.hive";
   }
+  
+  host hole4 {
+    hardware ethernet 08:00:27:fc:48:c0;
+    fixed-address 172.16.0.74;
+    option host-name "hole4.hive";
+  }
 
   host node1 {
     hardware ethernet 08:00:27:7d:6a:e2;
