new dhcp config

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -145,6 +145,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "hole4.hive";
   }
 
+  host hole5 {
+    hardware ethernet 08:00:27:11:3c:21;
+    fixed-address 172.16.0.75;
+    option host-name "hole5.hive";
+  }
+
   host node1 {
     hardware ethernet 08:00:27:7d:6a:e2;
     fixed-address 172.16.2.1;
