--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -150,6 +150,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.75;
     option host-name "hole5.hive";
   }
+  
+  host hole6 {
+    hardware ethernet 08:00:27:bf:b0:b9;
+    fixed-address 172.16.0.76;
+    option host-name "hole5.hive";
+  }
 
   host node1 {
     hardware ethernet 08:00:27:7d:6a:e2;
