new host and removed extra lines

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -138,7 +138,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.73;
     option host-name "hole3.hive";
   }
-  
+
   host hole4 {
     hardware ethernet 08:00:27:fc:48:c0;
     fixed-address 172.16.0.74;
@@ -150,11 +150,17 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.75;
     option host-name "hole5.hive";
   }
-  
+
   host hole6 {
     hardware ethernet 08:00:27:bf:b0:b9;
     fixed-address 172.16.0.76;
     option host-name "hole6.hive";
+  }
+
+  host hole7 {
+    hardware ethernet 08:00:27:2f:c0:c2;
+    fixed-address 172.16.0.77;
+    option host-name "hole7.hive";
   }
 
   host node1 {
