--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -32,7 +32,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host nlima {
-    hardware ethernet 00:22:41:31:3d:8e;
+    hardware ethernet c8:e0:eb:4c:1a:e7;
     fixed-address 172.16.0.23;
     option host-name "nlima.hive";
   }
