small mac address change

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -32,7 +32,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host nlima {
-    hardware ethernet c8:e0:eb:4c:1a:e7;
+    hardware ethernet 68:5b:35:a5:52:c8;
     fixed-address 172.16.0.23;
     option host-name "nlima.hive";
   }
