--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -55,70 +55,22 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "johndoe.hive";
   }
 
-  host sandbox5 {
-    hardware ethernet 08:00:27:fd:6f:08;
-    fixed-address 172.16.0.55;
-    option host-name "sandbox5.hive";
-  }
-
-  host sandbox6 {
+  host ubuntu {
     hardware ethernet 08:00:27:1a:8d:ab;
-    fixed-address 172.16.0.56;
-    option host-name "sandbox6.hive";
+    fixed-address 172.16.0.51;
+    option host-name "ubuntu.hive";
   }
 
-  host sandbox7 {
+  host freebsd9 {
     hardware ethernet 08:00:27:a5:6a:47;
-    fixed-address 172.16.0.57;
-    option host-name "sandbox7.hive";
+    fixed-address 172.16.0.52;
+    option host-name "freebsd9.hive";
   }
 
-  host sandbox8 {
-    hardware ethernet 08:00:27:ad:3e:bf;
-    fixed-address 172.16.0.58;
-    option host-name "sandbox8.hive";
-  }
-
-  host sandbox9 {
-    hardware ethernet 08:00:27:1a:63:6c;
-    fixed-address 172.16.0.59;
-    option host-name "sandbox9.hive";
-  }
-
-  host sandbox10 {
-    hardware ethernet 08:00:27:a1:ed:93;
-    fixed-address 172.16.0.60;
-    option host-name "sandbox10.hive";
-  }
-
-  host sandbox11 {
-    hardware ethernet 08:00:27:ea:43:f8;
-    fixed-address 172.16.0.61;
-    option host-name "sandbox11.hive";
-  }
-
-  host sandbox12 {
-    hardware ethernet 08:00:27:5a:26:f2;
-    fixed-address 172.16.0.62;
-    option host-name "sandbox12.hive";
-  }
-
-  host sandbox13 {
-    hardware ethernet 08:00:27:7e:0f:cb;
-    fixed-address 172.16.0.63;
-    option host-name "sandbox13.hive";
-  }
-
-  host sandbox14 {
-    hardware ethernet 08:00:27:0b:f4:bc;
-    fixed-address 172.16.0.64;
-    option host-name "sandbox14.hive";
-  }
-
-  host sandbox15 {
+  host gentoo {
     hardware ethernet 08:00:27:1b:89:16;
-    fixed-address 172.16.0.65;
-    option host-name "sandbox15.hive";
+    fixed-address 172.16.0.53;
+    option host-name "gentoo.hive";
   }
 
   host nas1 {
