new data binding

--- a/docker/omni/Dockerfile.proxy
+++ b/docker/omni/Dockerfile.proxy
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
+VOLUME /data:/data
+
 RUN apt-get update
 RUN apt-get install -y -q python python-setuptools wget
 RUN easy_install pip && pip install netius
