--- a/docker/omni/Dockerfile.mysql
+++ b/docker/omni/Dockerfile.mysql
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
+VOLUME /data:/data
+
 RUN apt-get update
 RUN apt-get install -y -q mysql-server pwgen wget
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf
