--- a/docker/omni/Dockerfile.mysql
+++ b/docker/omni/Dockerfile.mysql
@@ -10,5 +10,4 @@ RUN cp -R my.cnf /etc/mysql/my.cnf && rm my.cnf
 RUN /init.sh && rm init.sh
 RUN rm -f Dockerfile
 
-CMD usr/bin/mysqld_safe
-ENTRYPOINT data/exec
+ENTRYPOINT usr/bin/mysqld_safe
