--- a/docker/omni/Dockerfile.proxy
+++ b/docker/omni/Dockerfile.proxy
@@ -7,5 +7,4 @@ RUN easy_install pip && pip install netius
 RUN wget https://github.com/hivesolutions/config/raw/master/omni/proxy.py
 RUN rm -f Dockerfile
 
-CMD usr/bin/python proxy.py
-ENTRYPOINT /data/exec
+ENTRYPOINT usr/bin/python proxy.py
