--- a/docker/omni/Dockerfile.proxy
+++ b/docker/omni/Dockerfile.proxy
@@ -7,4 +7,4 @@ RUN easy_install pip && pip install netius
 RUN wget https://github.com/hivesolutions/config/raw/master/omni/proxy.py
 RUN rm -f Dockerfile
 
-ENTRYPOINT usr/bin/python proxy.py
+CMD usr/bin/python proxy.py
