--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -27,7 +27,7 @@ collation-server          = utf8_unicode_ci
 init-connect              = 'SET NAMES utf8'
 interactive_timeout       = 172800
 wait_timeout              = 172800
-key_buffer                = 512M
+key_buffer_size           = 512M
 max_allowed_packet        = 512M
 thread_stack              = 192K
 table_cache               = 64
