--- a/docker/omni/Dockerfile.mysql
+++ b/docker/omni/Dockerfile.mysql
@@ -5,10 +5,10 @@ RUN apt-get update
 RUN apt-get install -y -q mysql-server pwgen wget
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/init.sh
-RUN wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld
-RUN chmod 755 mysqld && chmod 755 *.sh
+RUN wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld_link
+RUN chmod 755 mysqld_link && chmod 755 *.sh
 RUN cp -R my.cnf /etc/mysql/my.cnf && rm my.cnf
 RUN /init.sh && rm init.sh
 RUN rm -f Dockerfile
 
-ENTRYPOINT mysqld
+ENTRYPOINT mysqld_link
