--- a/docker/omni/Dockerfile.mysql
+++ b/docker/omni/Dockerfile.mysql
@@ -7,8 +7,8 @@ RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/init.sh
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld_link
 RUN chmod 755 mysqld_link && chmod 755 *.sh
-RUN cp -R my.cnf /etc/mysql/my.cnf && rm my.cnf
-RUN /init.sh && rm init.sh
+RUN cp -R my.cnf etc/mysql/my.cnf && rm my.cnf
+RUN ./init.sh && rm init.sh
 RUN rm -f Dockerfile
 
 ENTRYPOINT ./mysqld_link
