--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -11,8 +11,9 @@ RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
 RUN cpm require base.txt && cpm require omni.txt
 RUN rm base.txt && rm omni.txt
-run rsync -a ~/.colony/meta/omni_assets_config/ ~/.colony/ && rm ~/.colony/spec.json
-RUN mkdir -p /usr/share/fonts/truetype/calibri && cp ~/.colony/meta/omni_assets_config/extra/fonts/calibri/* /usr/share/fonts/truetype/calibri
+run rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
+RUN mkdir -p usr/share/fonts/truetype/calibri && cp .colony/meta/omni_assets_config/extra/fonts/calibri/* usr/share/fonts/truetype/calibri
+RUN ln -s /data/fs colony/meta/pt.hive.colony.plugins.data.file.fs
 RUN rm -f Dockerfile
 
 CMD ["usr/local/bin/colony"]
