--- a/docker/omni/Dockerfile.proxy
+++ b/docker/omni/Dockerfile.proxy
@@ -1,9 +1,12 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
+ADD colony.json /colony.json
+
 RUN apt-get update
 RUN apt-get install -y -q python python-setuptools wget
-RUN easy_install pip && pip install netius
+RUN easy_install pip && pip install netius colony
+RUN cpm install omni_assets
 RUN wget https://github.com/hivesolutions/config/raw/master/omni/proxy.py
 RUN rm -f Dockerfile
 
