--- a/docker/omni/data/omni.env
+++ b/docker/omni/data/omni.env
@@ -9,3 +9,4 @@ export DB_USER=${DB_USER-root}
 export DB_PASSWORD=${DB_PASSWORD-root}
 export MYSQL_DATA=${MYSQL_DATA-/data/mysql}
 export FS_DATA=${FS_DATA-/data/fs}
+export SESSION_BASE_PATH=${SESSION_BASE_PATH-/data/session}
