initial redis link support

--- a/docker/omni/Dockerfile.redis
+++ b/docker/omni/Dockerfile.redis
@@ -4,6 +4,8 @@ MAINTAINER Hive Solutions
 RUN apt-get update
 RUN apt-get install -y -q redis-server wget
 RUN wget https://github.com/hivesolutions/config/raw/master/redis/redis.conf
+RUN wget https://github.com/hivesolutions/config/raw/master/redis/redis_link
+RUN chmod 755 redis_link
 RUN cp -R redis.conf etc/redis/redis.conf && rm redis.conf
 RUN rm -f Dockerfile
 
