--- a/docker/omni/data/omni.env
+++ b/docker/omni/data/omni.env
@@ -7,6 +7,7 @@ export DB_HOST=${DB_HOST-localhost}
 export DB_NAME=${DB_NAME-omni}
 export DB_USER=${DB_USER-root}
 export DB_PASSWORD=${DB_PASSWORD-root}
+export REDISTOGO_URL=${REDISTOGO_URL-redis://localhost}
 export MYSQL_DATA=${MYSQL_DATA-/data/mysql}
 export FS_DATA=${FS_DATA-/data/fs}
 export SESSION_PATH=${SESSION_PATH-/data/session}
