--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -1,20 +1,10 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
+ADD build.sh /build.sh
 ADD colony.json /colony.json
 
-RUN apt-get update
-RUN apt-get install -y -q python python-setuptools wget rsync
-RUN apt-get install -y -q python-dev libmysqlclient-dev libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev
-RUN easy_install pip && pip install colony mysql-python redis pillow reportlab pycrypto pytz pushi netius
-RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt
-RUN wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
-RUN cpm require base.txt && cpm require omni.txt
-RUN rm base.txt && rm omni.txt
-run rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
-RUN mkdir -p usr/share/fonts/truetype/calibri && cp .colony/meta/omni_assets_config/extra/fonts/calibri/* usr/share/fonts/truetype/calibri
-RUN ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
-RUN rm -f Dockerfile
+RUN bin/bash build.sh && rm build.sh
 
 CMD ["usr/local/bin/colony"]
 ENTRYPOINT ["data/exec"]
