--- a/docker/omni/Dockerfile.mysql.large
+++ b/docker/omni/Dockerfile.mysql.large
@@ -4,8 +4,7 @@ MAINTAINER Hive Solutions
 RUN apt-get update
 RUN apt-get install -y -q mysql-server pwgen wget
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf.large -O my.cnf
-RUN wget https://github.com/hivesolutions/config/raw/master/mysql/init.sh
-RUN wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld_link
+RUN wget https://github.com/hivesolutions/config/raw/master/mysql/{init.sh,mysqld_link}
 RUN chmod 755 mysqld_link && chmod 755 *.sh
 RUN cp -R my.cnf etc/mysql/my.cnf && rm my.cnf
 RUN ./init.sh && rm init.sh
