--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -3,9 +3,8 @@ MAINTAINER Hive Solutions
 
 ADD colony.json /colony.json
 
-RUN apt-get update
-RUN apt-get install -y -q python python-setuptools wget rsync
-RUN apt-get install -y -q python-dev libmysqlclient-dev libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev
+RUN apt-get update && apt-get install -y -q python python-setuptools wget rsync python-dev \
+    libmysqlclient-dev libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev
 RUN easy_install pip && pip install colony mysql-python redis pillow reportlab pycrypto pytz pushi netius
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/{base.txt,omni.txt}
 RUN cpm require base.txt && cpm require omni.txt
