--- a/docker/omni/Dockerfile.mysql
+++ b/docker/omni/Dockerfile.mysql
@@ -1,12 +1,10 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
-RUN apt-get update
-RUN apt-get install -y -q mysql-server pwgen wget
+RUN apt-get update && apt-get install -y -q mysql-server pwgen wget
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/{my.cnf,init.sh,mysqld_link}
 RUN chmod 755 mysqld_link && chmod 755 *.sh
 RUN cp -R my.cnf etc/mysql/my.cnf && rm my.cnf
 RUN ./init.sh && rm init.sh
-RUN rm -f Dockerfile
 
 ENTRYPOINT ["./mysqld_link"]
