new docker files

--- a/docker/colony/Dockerfile
+++ b/docker/colony/Dockerfile
@@ -1,12 +1,9 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
-RUN apt-get update
-RUN apt-get install -y -q python python-setuptools wget
+RUN apt-get update && apt-get install -y -q python python-setuptools wget
 RUN easy_install pip && pip install colony
-RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt
-RUN cpm require base.txt
-RUN rm base.txt
-RUN rm -f Dockerfile
+RUN bin/bash wget https://github.com/hivesolutions/config/raw/master/colony/base.txt
+RUN cpm require base.txt && rm base.txt
 
 CMD ["usr/local/bin/colony"]
