--- a/docker/omni/Dockerfile.redis
+++ b/docker/omni/Dockerfile.redis
@@ -2,7 +2,7 @@ FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
 RUN apt-get update && apt-get install -y -q redis-server wget
-RUN wget https://github.com/hivesolutions/config/raw/master/redis/{redis.conf,redis_link}
+RUN bin/bash wget https://github.com/hivesolutions/config/raw/master/redis/{redis.conf,redis_link}
 RUN chmod 755 redis_link
 RUN cp -R redis.conf etc/redis/redis.conf && rm redis.conf
 
