--- a/docker/omni/Dockerfile.mysql.large
+++ b/docker/omni/Dockerfile.mysql.large
@@ -2,8 +2,9 @@ FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
 RUN apt-get update && apt-get install -y -q mysql-server pwgen wget
-RUN bin/bash wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf.large -O my.cnf
-RUN bin/bash wget https://github.com/hivesolutions/config/raw/master/mysql/{init.sh,mysqld_link}
+RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf.large -O my.cnf && \
+wget https://github.com/hivesolutions/config/raw/master/mysql/init.sh && \
+wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld_link
 RUN chmod 755 mysqld_link && chmod 755 *.sh
 RUN cp -R my.cnf etc/mysql/my.cnf && rm my.cnf
 RUN ./init.sh && rm init.sh
