--- a/docker/omni/data/omni.env
+++ b/docker/omni/data/omni.env
@@ -11,4 +11,5 @@ export BUILD_SCHEMA=${BUILD_SCHEMA-0}
 export REDISTOGO_URL=${REDISTOGO_URL-redis://localhost}
 export MYSQL_DATA=${MYSQL_DATA-/data/mysql}
 export FS_DATA=${FS_DATA-/data/fs}
+export FS=${FS-$FS_DATA/default}
 export SESSION_PATH=${SESSION_PATH-/data/session}
