--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -19,6 +19,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
   option netbios-name-servers 172.16.0.11;
 
+  host servidor5.hive {
+    hardware ethernet 56:84:7a:fe:97:99;
+    fixed-address 172.16.0.15;
+    option host-name "servidor5.hive";
+  }
+
   host joamag {
     hardware ethernet 00:1f:f3:d4:2b:38;
     fixed-address 172.16.0.21;
