removed extra call in dockerfile

--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -8,7 +8,7 @@ libmysqlclient-dev libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev
 RUN easy_install pip && pip install colony mysql-python redis pillow reportlab pycrypto pytz pushi netius
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt && \
 wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
-RUN cpm require base.txt && cpm require omni.txt && rm base.txt && rm omni.txt
+RUN cpm require base.txt omni.txt && rm base.txt && rm omni.txt
 run rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
 RUN mkdir -p usr/share/fonts/truetype/calibri && cp .colony/meta/omni_assets_config/extra/fonts/calibri/* usr/share/fonts/truetype/calibri
 RUN ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
