--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
 RUN apt-get update && apt-get install -y -q mysql-server pwgen wget
-RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf && \
+RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf.small -O my.cnf && \
 wget https://github.com/hivesolutions/config/raw/master/mysql/init.sh && \
 wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld_link
 RUN chmod 755 mysqld_link && chmod 755 *.sh
