--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -9,7 +9,7 @@ RUN easy_install pip && pip install colony mysql-python redis pillow reportlab p
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt && \
 wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
 RUN cpm require base.txt omni.txt && rm base.txt omni.txt
-run rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
+RUN rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
 RUN mkdir -p usr/share/fonts/truetype/calibri && cp .colony/meta/omni_assets_config/extra/fonts/calibri/* usr/share/fonts/truetype/calibri
 RUN ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
 
