--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -13,7 +13,7 @@ wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
 RUN cpm require base.txt omni.txt && rm base.txt omni.txt
 RUN rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
 RUN mkdir -p usr/share/fonts/truetype/calibri && cp .colony/meta/omni_assets_config/extra/fonts/calibri/* usr/share/fonts/truetype/calibri
-RUN ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
+RUN mkdir -p /data/fs && ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
 
 CMD ["usr/local/bin/colony"]
 ENTRYPOINT ["data/exec"]
