--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -23,7 +23,7 @@ skip-external-locking
 bind-address              = 0.0.0.0
 default-storage-engine    = innodb
 character-set-server      = utf8
-collation-server          = utf8_unicode_ci
+collation-server          = utf8_bin
 init-connect              = 'SET NAMES utf8'
 interactive_timeout       = 172800
 wait_timeout              = 172800
