new home environment for colony

--- a/docker/colony/Dockerfile
+++ b/docker/colony/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
 MAINTAINER Hive Solutions
 
+ENV HOME /
+
 RUN apt-get update && apt-get install -y -q python python-setuptools wget
 RUN easy_install pip && pip install colony
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt
