--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -19,6 +19,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
   option netbios-name-servers 172.16.0.11;
 
+  host servidor3.hive {
+    hardware ethernet d0:27:88:69:b8:b6;
+    fixed-address 172.16.0.13;
+    option host-name "servidor3.hive";
+  }
+
   host servidor4.hive {
     hardware ethernet 00:26:2d:48:5b:4c;
     fixed-address 172.16.0.14;
