--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -37,7 +37,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "servidor5.hive";
   }
 
-  host nas1.hive {
+  host nas1 {
     hardware ethernet 00:11:32:38:cf:44;
     fixed-address 172.16.0.31;
     option host-name "nas1.hive";
