--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -19,19 +19,19 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
   option netbios-name-servers 172.16.0.11;
 
-  host servidor3.hive {
+  host servidor3 {
     hardware ethernet d0:27:88:69:b8:b6;
     fixed-address 172.16.0.13;
     option host-name "servidor3.hive";
   }
 
-  host servidor4.hive {
+  host servidor4 {
     hardware ethernet 00:26:2d:48:5b:4c;
     fixed-address 172.16.0.14;
     option host-name "servidor4.hive";
   }
 
-  host servidor5.hive {
+  host servidor5 {
     hardware ethernet 56:84:7a:fe:97:99;
     fixed-address 172.16.0.15;
     option host-name "servidor5.hive";
@@ -95,12 +95,6 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     hardware ethernet 08:00:27:1b:89:16;
     fixed-address 172.16.0.53;
     option host-name "gentoo.hive";
-  }
-
-  host nas1 {
-    hardware ethernet 08:00:27:3a:35:81;
-    fixed-address 172.16.0.31;
-    option host-name "nas1.hive";
   }
 
   host hole1 {
