new configuration for server

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -37,6 +37,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "servidor5.hive";
   }
 
+  host servidor6 {
+    hardware ethernet 38:2c:4a:b1:cd:3d;
+    fixed-address 172.16.0.16;
+    option host-name "servidor6.hive";
+  }
+
   host nas1 {
     hardware ethernet 00:11:32:38:cf:43;
     fixed-address 172.16.0.31;
