new dhcp configuration (for testing)

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -19,6 +19,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
   option netbios-name-servers 172.16.0.11;
 
+  host servidor8 {
+    hardware ethernet 08:00:27:cf:e4:3c;
+    fixed-address 172.16.0.18;
+    option host-name "servidor8.hive";
+  }
+
   host servidor3 {
     hardware ethernet d0:27:88:69:b8:b6;
     fixed-address 172.16.0.13;
