--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -1,3 +1,6 @@
+allow booting;
+allow bootp;
+
 ddns-update-style interim;
 ignore client-updates;
 
@@ -18,6 +21,9 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option ntp-servers 172.16.0.11, 172.16.0.12;
   option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
   option netbios-name-servers 172.16.0.11;
+
+  next-server 172.16.0.16;
+  filename "/tftpboot/pxelinux.0";
 
   host servidor8 {
     hardware ethernet 08:00:27:cf:e4:3c;
