new rasp values

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -61,6 +61,30 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "nas1.hive";
   }
 
+  host rasp1 {
+    hardware ethernet b8:27:eb:b5:e4:f2;
+    fixed-address 172.16.0.41;
+    option host-name "rasp1.hive";
+  }
+
+  host rasp2 {
+    hardware ethernet b8:27:eb:f9:ad:5d;
+    fixed-address 172.16.0.42;
+    option host-name "rasp2.hive";
+  }
+
+  host rasp3 {
+    hardware ethernet b8:27:eb:01:bd:36;
+    fixed-address 172.16.0.43;
+    option host-name "rasp3.hive";
+  }
+
+  host rasp4 {
+    hardware ethernet b8:27:eb:59:2a:76;
+    fixed-address 172.16.0.44;
+    option host-name "rasp4.hive";
+  }
+
   host joamag {
     hardware ethernet 00:1f:f3:d4:2b:38;
     fixed-address 172.16.0.21;
