new johndoe server

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -116,7 +116,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host johndoe {
-    hardware ethernet 00:50:8d:b0:fe:7e;
+    hardware ethernet 80:1f:02:b8:56:52;
     fixed-address 172.16.0.26;
     option host-name "johndoe.hive";
   }
