--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -25,10 +25,16 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   next-server 172.16.0.16;
   filename "/tftpboot/pxelinux.0";
 
-  host servidor8 {
-    hardware ethernet 08:00:27:cf:e4:3c;
-    fixed-address 172.16.0.18;
-    option host-name "servidor8.hive";
+  host impressora1 {
+    hardware ethernet a0:d3:c1:82:f2:e4;
+    fixed-address 172.16.0.3;
+    option host-name "impressora1.hive";
+  }
+
+  host impressora2 {
+    hardware ethernet f8:0d:60:0a:51:9f;
+    fixed-address 172.16.0.7;
+    option host-name "impressora2.hive";
   }
 
   host servidor3 {
