new mobile information

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -145,6 +145,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "gentoo.hive";
   }
 
+  host joamag-mob {
+    hardware ethernet a4:5e:60:da:5c:b3;
+    fixed-address 172.16.0.61;
+    option host-name "joamag-mob.hive";
+  }
+
   host hole1 {
     hardware ethernet 08:00:27:c8:6b:c8;
     fixed-address 172.16.0.71;
