--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -5,7 +5,7 @@ ddns-update-style interim;
 ignore client-updates;
 
 subnet 172.16.0.0 netmask 255.255.0.0 {
-  range 172.16.0.110 172.16.0.255;
+  range 172.16.16.1 172.16.16.255;
 
   default-lease-time 86400;
   max-lease-time 86400;
@@ -18,9 +18,9 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option broadcast-address 172.16.255.255;
   option subnet-mask 255.255.0.0;
 
-  option ntp-servers 172.16.0.11, 172.16.0.12;
-  option domain-name-servers 172.16.0.11, 172.16.0.12, 172.16.0.41;
-  option netbios-name-servers 172.16.0.11;
+  option ntp-servers 172.16.0.16,;
+  option domain-name-servers 172.16.0.16;
+  option netbios-name-servers 172.16.0.16;
 
   next-server 172.16.0.16;
   filename "/tftpboot/pxelinux.0";
