--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -4,7 +4,7 @@ allow bootp;
 ddns-update-style interim;
 ignore client-updates;
 
-subnet 172.16.0.0 netmask 255.255.0.0 {
+subnet 172.0.0.0 netmask 255.0.0.0 {
   range 172.16.16.1 172.16.16.255;
 
   default-lease-time 86400;
@@ -18,7 +18,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option broadcast-address 172.16.255.255;
   option subnet-mask 255.255.0.0;
 
-  option ntp-servers 172.16.0.16,;
+  option ntp-servers 172.16.0.16;
   option domain-name-servers 172.16.0.16;
   option netbios-name-servers 172.16.0.16;
 
