--- a/dhcp/Dockerfile
+++ b/dhcp/Dockerfile
@@ -3,9 +3,10 @@ MAINTAINER Hive Solutions
 
 EXPOSE 67/udp
 
-ADD dhcp /etc/dhcp_registers
+ADD dhcpd.conf /etc/dhcp/dhcpd.conf
+ADD hive.conf /etc/dhcp/hive.conf
 
 RUN apk update && apk add dhcp
 RUN touch /var/lib/dhcp/dhcpd.leases
 
-CMD ["/usr/sbin/dhcpd", "-f", "-cf", "/etc/dhcp_registers/dhcpd.conf"]
+CMD ["/usr/sbin/dhcpd", "-f", "-cf", "/etc/dhcp/dhcpd.conf"]
