new code sructure

--- a/dhcp/Dockerfile
+++ b/dhcp/Dockerfile
@@ -6,6 +6,8 @@ EXPOSE 67/udp
 ADD dhcpd.conf /etc/dhcp/config/dhcp/dhcpd.conf
 ADD hive.conf /etc/dhcp/config/dhcp/hive.conf
 
+WORKDIR /etc/dhcp
+
 RUN apk update && apk add dhcp
 RUN ln -s /etc/dhcp/config/dhcp/dhcpd.conf /etc/dhcp/dhcpd.conf
 RUN touch /var/lib/dhcp/dhcpd.leases
