--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -175,3 +175,6 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "node2.g.hive";
   }
 }
+
+subnet 172.17.0.0 netmask 255.255.0.0 {
+}
