--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -18,9 +18,9 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option broadcast-address 172.16.255.255;
   option subnet-mask 255.255.0.0;
 
-  option ntp-servers 172.16.0.16;
-  option domain-name-servers 172.16.0.16;
-  option netbios-name-servers 172.16.0.16;
+  option ntp-servers 172.16.0.11, 172.16.0.12;
+  option domain-name-servers 172.16.0.11, 172.16.0.12;
+  option netbios-name-servers 172.16.0.11;
 
   next-server 172.16.0.16;
   filename "/tftpboot/pxelinux.0";
