new dhcp configuration values

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -37,6 +37,18 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "impressora2.hive";
   }
 
+  host servidor1 {
+    hardware ethernet bc:ae:c5:33:9e:46;
+    fixed-address 172.16.0.11;
+    option host-name "servidor1.hive";
+  }
+
+  host servidor2 {
+    hardware ethernet bc:5f:f4:7f:c3:28;
+    fixed-address 172.16.0.12;
+    option host-name "servidor2.hive";
+  }
+
   host servidor3 {
     hardware ethernet d0:27:88:69:b8:b6;
     fixed-address 172.16.0.13;
