new seed definition

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -156,6 +156,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.0.72;
     option host-name "hole2.hive";
   }
+
+  host seed {
+    hardware ethernet b8:27:eb:67:ac:1f;
+    fixed-address 172.16.1.1;
+    option host-name "seed.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
