--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -62,7 +62,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host servidor5 {
-    hardware ethernet 56:84:7a:fe:97:99;
+    hardware ethernet 8c:89:a5:df:36:31;
     fixed-address 172.16.0.15;
     option host-name "servidor5.hive";
   }
