new dhcp configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -5,7 +5,8 @@ ddns-update-style interim;
 ignore client-updates;
 
 subnet 172.16.0.0 netmask 255.255.0.0 {
-  range 172.16.16.1 172.16.16.255;
+  range 172.16.0.110 172.16.0.255;
+  #range 172.16.16.1 172.16.16.255;
 
   default-lease-time 86400;
   max-lease-time 86400;
