--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -127,6 +127,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "johndoe.hive";
   }
 
+  host gcandal {
+    hardware ethernet b8:ae:ed:7e:17:78;
+    fixed-address 172.16.0.27;
+    option host-name "gcandal.hive";
+  }
+
   host joamag-mob {
     hardware ethernet a4:5e:60:da:5c:b3;
     fixed-address 172.16.0.61;
