new acaldas value

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -127,10 +127,10 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "johndoe.hive";
   }
 
-  host gcandal {
+  host acaldas {
     hardware ethernet b8:ae:ed:7e:17:78;
     fixed-address 172.16.0.27;
-    option host-name "gcandal.hive";
+    option host-name "acaldas.hive";
   }
 
   host joamag-mob {
