--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -7,7 +7,7 @@ ADD colony.json /colony.json
 
 RUN apt-get update && apt-get install -y -q gcc python python-setuptools wget rsync python-dev \
 libmysqlclient-dev libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libffi-dev
-RUN easy_install pip && pip install appier=1.5.21 netius colony mysql-python redis pillow reportlab pycrypto pytz pushi
+RUN easy_install pip && pip install appier==1.5.21 netius colony mysql-python redis pillow reportlab pycrypto pytz pushi
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt && \
 wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
 RUN cpm require base.txt omni.txt && rm base.txt omni.txt
