new dhcp configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -22,6 +22,8 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option domain-name-servers 172.16.1.1, 172.16.0.11, 172.16.0.12, 172.16.0.14;
   option netbios-name-servers 172.16.0.1;
 
+  option dhcp6.name-servers 2001:818:de21:5700:ba27:ebff:fe67:ac1f, 2001:818:de21:5700:beae:c5ff:fe33:9e46, 2001:818:de21:5700:be5f:f4ff:fe7f:c328, 2001:818:de21:5700:3a2c:4aff:feb1:cd3d;
+
   next-server 172.16.0.14;
   filename "/tftpboot/pxelinux.0";
 
