--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -13,7 +13,7 @@ RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt &&\
 RUN cpm require base.txt omni.txt && rm base.txt omni.txt
 RUN rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
 RUN mkdir -p /usr/share/fonts/truetype
-RUN cp -rp ~/.colony/meta/omni_assets_config/extra/fonts/* /usr/share/fonts/truetype
+RUN cp -rp .colony/meta/omni_assets_config/extra/fonts/* /usr/share/fonts/truetype
 RUN mkdir -p /data/fs && ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
 
 CMD ["usr/local/bin/colony"]
