new docker configs

--- a/docker/ustore/Dockerfile
+++ b/docker/ustore/Dockerfile
@@ -13,7 +13,8 @@ RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt &&\
     wget https://github.com/hivesolutions/config/raw/master/colony/ustore.txt
 RUN cpm require base.txt omni.txt ustore.txt && rm base.txt omni.txt ustore.txt
 RUN rsync -a .colony/meta/omni_assets_config/ .colony/ && rm .colony/spec.json
-RUN mkdir -p usr/share/fonts/truetype/calibri && cp .colony/meta/omni_assets_config/extra/fonts/calibri/* usr/share/fonts/truetype/calibri
+RUN mkdir -p usr/share/fonts/truetype
+RUN cp .colony/meta/omni_assets_config/extra/fonts/*/* usr/share/fonts/truetype
 RUN mkdir -p /data/fs && ln -s /data/fs .colony/meta/pt.hive.colony.plugins.data.file.fs
 
 CMD ["usr/local/bin/colony"]
