new switch configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -26,6 +26,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   next-server 172.16.0.14;
   filename "/tftpboot/pxelinux.0";
 
+  host switch-extra {
+    hardware 84:1b:5e:95:b5:65
+    fixed-address 172.16.0.2;
+    option host-name "switch-extra.hive";
+  }
+
   host impressora1 {
     hardware ethernet a0:d3:c1:82:f2:e4;
     fixed-address 172.16.0.3;
