--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -27,7 +27,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   filename "/tftpboot/pxelinux.0";
 
   host switch-extra {
-    hardware ethernet 84:1b:5e:95:b5:65
+    hardware ethernet 84:1b:5e:95:b5:65;
     fixed-address 172.16.0.2;
     option host-name "switch-extra.hive";
   }
