new nas configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -74,6 +74,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "nas1.hive";
   }
 
+  host nas2 {
+    hardware ethernet 00:11:32:7f:5b:bb;
+    fixed-address 172.16.0.32;
+    option host-name "nas2.hive";
+  }
+
   host rasp1 {
     hardware ethernet b8:27:eb:b5:e4:f2;
     fixed-address 172.16.0.41;
