--- a/docker/omni/Dockerfile.mysql
+++ b/docker/omni/Dockerfile.mysql
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 LABEL version="1.0"
 LABEL maintainer="Hive Solutions <development@hive.pt>"
 
-RUN apt-get update && apt-get install -y -q mysql-server pwgen wget
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y -q mysql-server pwgen wget
 RUN wget https://github.com/hivesolutions/config/raw/master/mysql/my.cnf && \
     wget https://github.com/hivesolutions/config/raw/master/mysql/init.sh && \
     wget https://github.com/hivesolutions/config/raw/master/mysql/mysqld_link
