--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -146,22 +146,16 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "acaldas.hive";
   }
 
+  host tmagalhaes {
+    hardware ethernet 2c:4d:54:eb:bd:f7;
+    fixed-address 172.16.0.28;
+    option host-name "tmagalhaes.hive";
+  }
+
   host joamag-mob {
     hardware ethernet a4:5e:60:da:5c:b3;
     fixed-address 172.16.0.61;
     option host-name "joamag-mob.hive";
-  }
-
-  host hole1 {
-    hardware ethernet 08:00:27:c8:6b:c8;
-    fixed-address 172.16.0.71;
-    option host-name "hole1.hive";
-  }
-
-  host hole2 {
-    hardware ethernet 08:00:27:3d:49:a5;
-    fixed-address 172.16.0.72;
-    option host-name "hole2.hive";
   }
 
   host seed {
