--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -163,6 +163,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.1.1;
     option host-name "seed.hive";
   }
+
+  host pie1 {
+    hardware ethernet b8:27:eb:32:a1:2b;
+    fixed-address 172.16.2.1;
+    option host-name "pie1.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
