--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -169,6 +169,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.2.1;
     option host-name "pie1.hive";
   }
+
+  host sonoff1 {
+    hardware ethernet dc:4f:22:0d:ce:27;
+    fixed-address 172.16.3.1;
+    option host-name "sonoff1.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
