--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -175,6 +175,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.3.1;
     option host-name "sonoff1.hive";
   }
+
+  host wemos1 {
+    hardware ethernet 2c:3a:e8:43:a2:46;
+    fixed-address 172.16.3.2;
+    option host-name "wemos1.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
