new servidor5 values

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -68,6 +68,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "servidor4.hive";
   }
 
+  host servidor5 {
+    hardware ethernet 00:13:ef:86:15:26;
+    fixed-address 172.16.0.15;
+    option host-name "servidor5.hive";
+  }
+
   host nas1 {
     hardware ethernet 00:11:32:38:cf:43;
     fixed-address 172.16.0.31;
