new mac address servidor5

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -69,7 +69,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host servidor5 {
-    hardware ethernet 00:13:ef:86:15:26;
+    hardware ethernet 30:9c:23:e1:72:b7;
     fixed-address 172.16.0.15;
     option host-name "servidor5.hive";
   }
