new dhcp configurations

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -164,6 +164,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "joamag-mob.hive";
   }
 
+  host hole1 {
+    hardware ethernet e0:d5:5e:6e:69:09;
+    fixed-address 172.16.0.71;
+    option host-name "hole1.hive";
+  }
+
   host seed {
     hardware ethernet b8:27:eb:67:ac:1f;
     fixed-address 172.16.1.1;
@@ -186,6 +192,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     hardware ethernet 2c:3a:e8:43:a2:46;
     fixed-address 172.16.3.2;
     option host-name "wemos1.hive";
+  }
+
+  host vbox1 {
+    hardware ethernet e0:d5:5e:6e:69:0;
+    fixed-address 172.16.4.1;
+    option host-name "vbox1.hive";
   }
 }
 
