new mac address

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -195,7 +195,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host vbox1 {
-    hardware ethernet e0:d5:5e:6e:69:0;
+    hardware ethernet 08:00:27:d3:f8:55;
     fixed-address 172.16.4.1;
     option host-name "vbox1.hive";
   }
